--- a/Module-2/17_Module2_Review/student-lecture/Teams/Teams/appsettings.json
+++ b/Module-2/17_Module2_Review/student-lecture/Teams/Teams/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "NFLDB" : "Server=.\\SQLExpress; Database=NFLDB;Trusted_connection = true;"
+  },
   "AllowedHosts": "*"
 }
